--- a/bsc/src/Makefile
+++ b/bsc/src/Makefile
@@ -36,7 +36,7 @@
 -include $(TOPDIR)/Make.defs
 
 ASRCS =
-CSRCS = stm32_boot.c stm32_leds.c stm32_spi.c stm32_adc.c stm32_relays.c
+CSRCS = stm32_boot.c stm32_leds.c stm32_spi.c stm32_adc.c stm32_relays.c stm32_nsh.c
 
 ifeq ($(CONFIG_HAVE_CXX),y)
 CSRCS += stm32_cxxinitialize.c
@@ -68,10 +68,6 @@ endif
 
 ifeq ($(CONFIG_LCD_SSD1289),y) # F103
 CSRCS += stm32_ssd1289.c
-endif
-
-ifeq ($(CONFIG_NSH_ARCHINIT),y)
-CSRCS += stm32_nsh.c
 endif
 
 ifeq ($(CONFIG_USBMSC),y)
